# shoplazza

./: .env.example  .gitignore  ALLOWED_COUNTRIES_IMPLEMENTATION.md  CLAUDE.md  DEPLOYMENT_NOTES.md  README.md  SCHEMA_SUMMARY.md  SECURITY.md  SESSION_SUMMARY.md  VERCEL_CHECKLIST.md  extension.config.js  extensions  init-db.ps1  next.config.ts  package-lock.json  package.json  vercel.json
.widget-config/: oostest.myshoplaza.com.json
Shoplazza-REFERENCE/: CONTEXT_LOG.md  PROTOCOL_ADAPTER_IMPLEMENTATION_LOG.md  development-guidelines.md  execution-plan.md  minimal.wat  technical-architecture.md  test-wasm-node.js
Shoplazza-REFERENCE/shoplazza-addon-system/shoplazza-addon-app/cart-transform-rust/: Cargo-example.toml  Cargo-shoplazza-simple.toml  Cargo-shoplazza.toml  Cargo.toml  README.md  cart-transform-rust-wrapper.js  cart-transform-shoplazza-optimized.wasm  deploy-rust.sh  deploy-rust2.sh  deploy-rust3.sh  deploy-shoplazza.sh  test-real-cart.json  test-rust-integration.js
Shoplazza-REFERENCE/shoplazza-addon-system/shoplazza-addon-app/cart-transform-rust/src/: lib-web.rs  lib.rs
cb-new-insure-item-protection/: README.md  package.json
cd-insure-item-protection3/: extension.config.js  package-lock.json  package.json
checkout-extension/: README.md  build.js  config.js  extension.json  package.json  zip.js
docs/: CART_TRANSFORM_FLOW.md  CART_TRANSFORM_PARTNER_API.md  CART_VS_CHECKOUT_WHY_SUMMARY_doesnt_UPDATE.md  CHECKOUT_API_GAP.md  CHECKOUT_EXTENSION_SETUP.md  DEPLOY_AND_TEST_COMMANDS.md  DEPLOY_VERCEL_GITHUB.md  DESIGN_REFERENCE.md  FEATURES_SUMMARY.md  (+17 more)
(+239 files in other folders)
